Add Foreground service

--- a/Music/app/src/main/AndroidManifest.xml
+++ b/Music/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".MusicForegroundService" />
     </application>
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
